# tlink

./: .env.example  .gitignore  Cargo.toml  README.md  install.sh  prek.toml  uninstall.sh
.github/workflows/: ci.yml  release.yml
docs/: claude-notification.md
src/: bundle.rs  cli.rs  config.rs  doctor.rs  main.rs  notify.rs  open.rs  restart.rs  status.rs  telemetry.rs  terminal.rs
src/addon/: claude_notification.rs  mod.rs
src/addon/claude_notification/: mod.rs  wizard.rs
src/notify/: alerter.rs  dunstify.rs  mod.rs  terminal_notifier.rs
src/setup/: mod.rs  wizard.rs
tests/: integration.rs
